Initial Mod Redo Commit
Redesigning The Mod Again. Inital Commit From Newest Redesign. Sorry For
Any Inconvience.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,30 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# =========================
+# Forge Modding Files
+# =========================
+
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
